--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,6 +3,7 @@ env:
   commonjs: true
   es6: true
   node: true
+  jest: true
 extends:
   - airbnb
 globals:
@@ -14,4 +15,5 @@ parserOptions:
   ecmaVersion: 2018
 plugins:
   - react
+  - jest
 rules: {}
