--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "file-loader": "^6.0.0",
     "jest": "^24.9.0",
     "node-sass": "^4.13.1",
     "nodemon": "^1.19.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "url-loader": "^4.0.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
