--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --config webpack.config.js",
     "start-dev": "NODE_ENV=development nodemon main.js",
     "lint": "./node_modules/.bin/eslint .",
-    "format": "./node_modules/.bin/eslint --fix ."
+    "format": "./node_modules/.bin/eslint --fix .",
+    "heroku-postbuild": "webpack -p --config ./webpack.config.js"
   },
   "author": "",
   "license": "ISC",
