--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest",
     "build": "webpack --config webpack.config.js",
     "start-dev": "NODE_ENV=development nodemon main.js",
+    "start": "node main.js",
     "lint": "./node_modules/.bin/eslint .",
     "format": "./node_modules/.bin/eslint --fix .",
     "heroku-postbuild": "webpack -p --config ./webpack.config.js"
